# -*- mode: makefile; -*-

nobase_include_HEADERS =                        \
    ypdf/detail/_config.hh                      \
    ypdf/detail/config.hh                       \
    ypdf/detail/defs.hh                         \
    ypdf/detail/overloaded.hh                   \
    ypdf/ypdf.hh                                \
    ypdf/parser.cc                              \
    ypdf/parser.hh                              \
    ypdf/parser/ast.hh                          \
    ypdf/parser/ast/array.hh                    \
    ypdf/parser/ast/dict.cc                     \
    ypdf/parser/ast/dict.hh                     \
	ypdf/parser/ast/iobj.hh                     \
    ypdf/parser/ast/name.hh                     \
    ypdf/parser/ast/null.hh                     \
    ypdf/parser/ast/obj.hh                      \
    ypdf/parser/ast/obj_fwd.hh                  \
    ypdf/parser/ast/ref.hh                      \
    ypdf/parser/ast/stream.hh                   \
    ypdf/parser/ast/string.hh                   \
    ypdf/parser/ast/xref.hh                     \
    ypdf/parser/array.cc                        \
    ypdf/parser/array.hh                        \
    ypdf/parser/character.hh                    \
    ypdf/parser/comment.cc                      \
    ypdf/parser/comment.hh                      \
    ypdf/parser/ctype.cc                        \
    ypdf/parser/ctype.hh                        \
    ypdf/parser/dict.cc                         \
    ypdf/parser/dict.hh                         \
    ypdf/parser/eol.cc                          \
    ypdf/parser/eol.hh                          \
    ypdf/parser/error.cc                        \
    ypdf/parser/error.hh                        \
    ypdf/parser/iobj.cc                         \
    ypdf/parser/iobj.hh                         \
    ypdf/parser/iterator_guard.hh               \
    ypdf/parser/lit.cc                          \
    ypdf/parser/lit.hh                          \
    ypdf/parser/lookahead.cc                    \
    ypdf/parser/lookahead.hh                    \
    ypdf/parser/name.cc                         \
    ypdf/parser/name.hh                         \
    ypdf/parser/numeric.cc                      \
    ypdf/parser/numeric.hh                      \
    ypdf/parser/obj.cc                          \
    ypdf/parser/obj.hh                          \
    ypdf/parser/ref.cc                          \
    ypdf/parser/ref.hh                          \
    ypdf/parser/skip.cc                         \
    ypdf/parser/skip.hh                         \
    ypdf/parser/stream.cc                       \
    ypdf/parser/stream.hh                       \
    ypdf/parser/string.cc                       \
    ypdf/parser/string.hh                       \
    ypdf/parser/trailer.cc                      \
    ypdf/parser/trailer.hh                      \
    ypdf/parser/xref.cc                         \
    ypdf/parser/xref.hh                         \
    ypdf/parser/xrefstm.cc                      \
    ypdf/parser/xrefstm.hh                      \
    ypdf/parser/xreftbl.cc                      \
    ypdf/parser/xreftbl.hh                      \
    ypdf/stream.hh                              \
    ypdf/stream/ascii85_input_filter.hh         \
    ypdf/stream/ascii85_output_filter.hh        \
    ypdf/stream/asciihex_input_filter.hh        \
    ypdf/stream/asciihex_output_filter.hh       \
    ypdf/stream/lzw_filter_base.hh              \
    ypdf/stream/lzw_input_filter.hh             \
    ypdf/stream/lzw_output_filter.hh
