ascii85_input_test = executable('ascii85_input_test', 'ascii85_input_test.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('ascii85_input_test test', ascii85_input_test)

ascii85_output_test = executable('ascii85_output_test', 'ascii85_output_test.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('ascii85_output_test test', ascii85_output_test)

asciihex_input_test = executable('asciihex_input_test', 'asciihex_input_test.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('asciihex_input_test test', asciihex_input_test)

asciihex_output_test = executable('asciihex_output_test', 'asciihex_output_test.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('asciihex_output_test test', asciihex_output_test)

eol = executable('eol', 'eol.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('eol test', eol)

comment = executable('comment', 'comment.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('comment test', comment)

lit = executable('lit', 'lit.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('lit test', lit)

lookahead = executable('lookahead', 'lookahead.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('lookahead test', lookahead)

name = executable('name', 'name.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('name test', name)

numeric_ = executable('numeric_', 'numeric.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('numeric_ test', numeric_)

obj = executable('obj', 'obj.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('obj test', obj)

ref = executable('ref', 'ref.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('ref test', ref)

skip = executable('skip', 'skip.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('skip test', skip)

string_ = executable('string_', 'string.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('string_ test', string_)

xref = executable('xref', 'xref.cc', include_directories : inc, link_with : ypdflib, dependencies : [boost_dep, test_dep])
test('xref test', xref)
